hphp/test/zend/good/ext/standard/tests/strings/strtoupper1.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if( substr(PHP_OS, 0, 3) == 'WIN') {
  if (!setlocale(LC_ALL, 'C')) {
    exit('skip need "C" locale (this windows is broken)');
  }
} else {
  if (!setlocale(LC_ALL, 'en_US.UTF-8', 'en')) {
    exit('skip need "en_US.UTF-8" locale');
  }
}
}
